--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "nest-api-project",
+  "name": "api-qa-junior",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "dk:db-create": "docker run --name some-postgres -p 5432:5432 -e POSTGRES_PASSWORD=mysecretpassword -d postgres",
-    "dk:db-up": "docker start some-postgres",
-    "dk:db-stop": "docker stop some-postgres",
+    "docker:up": "docker build -t api-qa-junior . && docker run -dp 3000:3000 api-qa-junior",
+    "docker:build": "docker build -t api-qa-junior .",
+    "docker:run": "docker run -dp 3000:3000 api-qa-junior",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -42,6 +42,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "cypress": "^10.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
