--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:cypress": "npx cypress open",
+    "test:cypress:db": "npx cypress run --record --key 150824a6-c4aa-47c5-baef-f868450b35f6"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -42,7 +44,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "cypress": "^10.0.0",
+    "cypress": "^10.11.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
