--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Cypress
+cypress/screenshots
+cypress/videos
