--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -4,5 +4,5 @@
     "lib": ["es6", "dom"],
     "types": ["cypress", "node", "cypress-plugin-api"]
   },
-  "include": ["**/*.ts", "../cypress.d.ts"]
+  "include": ["**/*.ts", "**/*.cy.ts"]
 }
