--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["src", "./cypress.d.ts"]
+  "include": ["src"]
 }
